# email-triage-openenv

./: .gitignore  Dockerfile  README.md  inference.py  launch.ps1  mock_inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
email_triage_env/: dataset.py  env.py  graders.py  models.py  server.py
server/: app.py
tests/: test_env.py
