[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "Real-world email triage environment for training and evaluating AI agents."
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "openai==1.30.1",
    "python-multipart==0.0.9",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Hari15prasad/email-triage-openenv"
